--- a/lumen/app1/templates/app1/home.html
+++ b/lumen/app1/templates/app1/home.html
@@ -34,6 +34,7 @@
                     <span class="card-category">{{ manchete_principal.categoria }}</span>
                     <h2 class="card-title"><a href="#">{{ manchete_principal.titulo }}</a></h2>
                     <p class="card-summary">{{ manchete_principal.resumo }}</p>
+                <button class="read-more" href="{%url 'sugestao'%}"> sugestões de Leitura</button>
                 </div>
             </article>
             {% endif %}
