fazendo a parte do back para direcionamento das paginas das categorias, exemplo: esportes

--- a/app1/templates/app1/home.html
+++ b/app1/templates/app1/home.html
@@ -14,10 +14,10 @@
         <div class="container">
             <h1 class="logo-text">JC</h1>
             <nav class="main-nav">
-                <a href="#">Pernambuco</a>
-                <a href="#">Política</a>
-                <a href="#">Esportes</a>
-                <a href="#">Cultura</a>
+                <a href="{%url 'topico_pernambuco'%}">Pernambuco</a>
+                <a href="{%url 'topico_politica'%}">Política</a>
+                <a href="{%url 'topico_esportes'%}">Esportes</a>
+                <a href="{%url 'topico_cultura'%}">Cultura</a>
             </nav>
         </div>
     </header>
