--- a/app1/templates/app1/home.html
+++ b/app1/templates/app1/home.html
@@ -4,9 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Jornal do Commercio</title>
-    
     <link rel="stylesheet" href="{% static 'app1/css/style.css' %}">
-
 </head>
 <body>
 
@@ -14,10 +12,10 @@
         <div class="container">
             <h1 class="logo-text">JC</h1>
             <nav class="main-nav">
-                <a href="{%url 'topico_pernambuco'%}">Pernambuco</a>
-                <a href="{%url 'topico_politica'%}">Política</a>
-                <a href="{%url 'topico_esportes'%}">Esportes</a>
-                <a href="{%url 'topico_cultura'%}">Cultura</a>
+                <a href="{% url 'topico_pernambuco' %}">Pernambuco</a>
+                <a href="{% url 'topico_politica' %}">Política</a>
+                <a href="{% url 'topico_esportes' %}">Esportes</a>
+                <a href="{% url 'topico_cultura' %}">Cultura</a>
             </nav>
         </div>
     </header>
@@ -32,9 +30,12 @@
                 {% endif %}
                 <div class="card-content">
                     <span class="card-category">{{ manchete_principal.categoria }}</span>
-                    <h2 class="card-title"><a href="#">{{ manchete_principal.titulo }}</a></h2>
+                    <h2 class="card-title">
+                        <a href="{% url 'exibir_artigo' manchete_principal.id %}">
+                            {{ manchete_principal.titulo }}
+                        </a>
+                    </h2>
                     <p class="card-summary">{{ manchete_principal.resumo }}</p>
-                <button class="read-more" href="{%url 'sugestao' manchete_principal.id %}"> sugestões de Leitura</button>
                 </div>
             </article>
             {% endif %}
@@ -48,7 +49,11 @@
                     {% endif %}
                     <div class="card-content">
                         <span class="card-category">{{ artigo.categoria }}</span>
-                        <h4 class="card-title"><a href="#">{{ artigo.titulo }}</a></h4>
+                        <h4 class="card-title">
+                            <a href="{% url 'exibir_artigo' artigo.id %}">
+                                {{ artigo.titulo }}
+                            </a>
+                        </h4>
                     </div>
                 </article>
                 {% endfor %}
@@ -61,7 +66,11 @@
             {% for artigo in artigos_politica %}
                 <article class="card card-sidebar">
                     <div class="card-content">
-                        <h5 class="card-title"><a href="#">{{ artigo.titulo }}</a></h5>
+                        <h5 class="card-title">
+                            <a href="{% url 'exibir_artigo' artigo.id %}">
+                                {{ artigo.titulo }}
+                            </a>
+                        </h5>
                     </div>
                 </article>
             {% empty %}
@@ -74,7 +83,11 @@
             {% for artigo in artigos_opiniao %}
                 <article class="card card-sidebar">
                     <div class="card-content">
-                        <h5 class="card-title"><a href="#">{{ artigo.titulo }}</a></h5>
+                        <h5 class="card-title">
+                            <a href="{% url 'exibir_artigo' artigo.id %}">
+                                {{ artigo.titulo }}
+                            </a>
+                        </h5>
                     </div>
                 </article>
             {% empty %}
