implementando a teg de audio no template de exibir os artigos

--- a/app1/templates/app1/exibir_artigo.html
+++ b/app1/templates/app1/exibir_artigo.html
@@ -1,3 +1,7 @@
+<audio controls>
+    <source src="{% url 'artigo_audio' artigo.id %}" type="audio/mpeg">
+    Seu navegador não suporta áudio.
+</audio>
 <h1>{{ artigo.titulo }}</h1>
 <p>{{ artigo.conteudo }}</p>
 <a class="read-more" href="{% url 'sugestao' artigo.id %}">
