--- a/app1/templates/app1/topico_esportes.html
+++ b/app1/templates/app1/topico_esportes.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tópico: Esportes</title>
-    <link rel="stylesheet" href="{% static 'caminho/para/seuarquivo.css' %}">
+    <link rel="stylesheet" href="{% static 'app1/css/style.css' %}">
 </head>
 <body>
     
