--- a/app1/templates/app1/exibir_artigo.html
+++ b/app1/templates/app1/exibir_artigo.html
@@ -1,12 +1,65 @@
-<audio controls>
-    <source src="{% url 'artigo_audio' artigo.id %}" type="audio/mpeg">
-    Seu navegador não suporta áudio.
-</audio>
-<h1>{{ artigo.titulo }}</h1>
-<p>{{ artigo.conteudo }}</p>
-<h2><a class="read-more" href="{% url 'sugestao' artigo.id %}">
-    Sugestões de Leitura
-</a></h2>
-<h2><a class="read-more" href="{% url 'bullets' artigo.id %}">
-    Ver Pontos Chave
-</a></h2>
+{% load static %}
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>{{ artigo.titulo }}</title>
+    <link rel="stylesheet" href="{% static 'app1/css/style.css' %}">
+    
+</head>
+<body>
+
+    <header class="main-header">
+        <div class="container">
+            <h1 class="logo-text">JC</h1>
+            <nav class="main-nav">
+                <a href="{% url 'home' %}">home</a>
+                <a href="{% url 'topico_pernambuco' %}">Pernambuco</a>
+                <a href="{% url 'topico_politica' %}">Política</a>
+                <a href="{% url 'topico_esportes' %}">Esportes</a>
+                <a href="{% url 'topico_cultura' %}">Cultura</a>
+            </nav>
+        </div>
+    </header>
+
+    <main class="container">
+        
+        <div class="article-content">
+            
+            <audio controls>
+                <source src="{% url 'artigo_audio' artigo.id %}" type="audio/mpeg">
+                Seu navegador não suporta áudio.
+            </audio>
+
+            <h1>{{ artigo.titulo }}</h1>
+
+            {% if artigo.data_publicacao %}
+                <p class="card-date">Publicado em: {{ artigo.data_publicacao|date:"d de F, Y" }}</p>
+            {% endif %}
+
+            <p>{{ artigo.conteudo|safe }}</p> 
+            <div class="article-actions">
+                <h4>
+                    <a class="read-more" href="{% url 'sugestao' artigo.id %}">
+                        Sugestões de Leitura
+                    </a>
+                </h4>
+                <h4>
+                    <a class="read-more" href="{% url 'bullets' artigo.id %}">
+                        Ver Pontos Chave
+                    </a>
+                </h4>
+            </div>
+        </div>
+
+    </main>
+
+    <footer class="main-footer">
+        <div class="container">
+            <p>&copy; {% now "Y" %} JCPM. Reconstruído para fins acadêmicos.</p>
+        </div>
+    </footer>
+
+</body>
+</html>
