--- a/app1/templates/app1/topico_esportes.html
+++ b/app1/templates/app1/topico_esportes.html
@@ -13,6 +13,7 @@
         <div class="container">
             <h1 class="logo-text">Esportes</h1>
             <nav class="main-nav">
+                <a href="{% url 'home' %}">home</a>
                 <a href="{% url 'topico_politica' %}">Política</a>
                 <a href="{% url 'topico_pernambuco' %}">Pernambuco</a>
                 <a href="{% url 'topico_cultura' %}">Cultura</a>
