integrando o gpt via api para gerar os links do conteudo de contexto

--- a/app1/templates/app1/exibir_artigo.html
+++ b/app1/templates/app1/exibir_artigo.html
@@ -91,6 +91,11 @@
                         Ver Pontos Chave
                     </a>
                 </h4>
+                <h4>
+                    <a class="read-more" href="{% url 'conteudo_de_contexto' artigo.id %}">
+                        Ver conteudo de contexto
+                    </a>
+                </h4>
             </div>
         </div>
 
