--- a/app1/templates/app1/base.html
+++ b/app1/templates/app1/base.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <title>{% block title %}Jornal do Commercio{% endblock %}</title>
-    
     <link rel="stylesheet" href="{% static 'app1/css/style.css' %}">
+
+    
     
     </head>
 <body>
@@ -17,6 +18,7 @@
             <h1 class="logo-text">JC</h1>
             
             <nav class="main-nav">
+                <a href="{% url 'home' %}">Home</a>
                 <a href="{% url 'topico_pernambuco' %}">Pernambuco</a>
                 <a href="{% url 'topico_politica' %}">Política</a>
                 <a href="{% url 'topico_esportes' %}">Esportes</a>
