--- a/app1/templates/app1/login.html
+++ b/app1/templates/app1/login.html
@@ -4,7 +4,17 @@
 {% block title %}Login ou Cadastro - JC Portal{% endblock %}
 
 {% block content %}
-
+<style>
+    .login-background-image{
+        background-color: #fffbe6;     
+        border: 2px solidrgb(255, 255, 255);    
+        border-radius: 8px;            
+        padding: 20px;                 
+        box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1); 
+        transition: transform 0.2s ease, box-shadow 0.2s ease; 
+    }
+</style>
+<div class="login-background-image">
 <div class="home-container">
     
     <div class="login-layout-container" style="display: flex; justify-content: center; align-items: center; height: 100vh;">
@@ -56,5 +66,5 @@
     </div>
     
 </div>
-
+</div>
 {% endblock %}
